--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <!-- footer -->
     <div class="footer" id="about">
-        <p class="github"><a href="https://rizkinuzulmuzaki.github.io/" target="_blank">Github</a></p>
+        <p class="github"><a href="https://rizki-nm.github.io/" target="_blank">Github</a></p>
         <p class="copy">Copyrigth &copy; Rizki. All Right Reserved.</p>
     </div>
 
